# panel-lemanique-db

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
R/: consolidate_data.R
backend/: .env.example  Makefile  pyproject.toml
backend/app/: crud.py  main.py  schemas.py
backend/data_ingestion/: ingest_wave2.py
backend/database/: create_tables.py  database.py  drop_tables.py
backend/database/models/: participant.py  participant_label.py  participant_labels.py  participants.py  question.py  question_label.py  question_labels.py  questions.py  response.py  responses.py  section.py  sections.py  survey.py  survey_completion.py  survey_completion_label.py  survey_completion_labels.py  surveys.py
data_preprocessing/: Makefile  preprocess_wave2.R  utils.R
panel_lemanique_db/: create_tables.py
panel_lemanique_db/models/: participant_labels.py  participants.py  question_labels.py  questions.py  responses.py  sections.py  survey_completion.py  survey_completion_labels.py  surveys.py
reports/: data_wrangling.qmd
sql/tables/: create_participant_labels.sql  create_participants.sql  create_question_labels.sql  create_questions.sql  create_responses.sql  create_sections.sql  create_surveys.sql
