[tool.poetry]
name = "panel-lemanique-db"
version = "0.1.0"
description = ""
authors = ["Hugo Solleder <hugo.solleder@epfl.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pre-commit = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
