[tool.poetry]
name = "panel-lemanique-db"
version = "0.1.0"
description = ""
authors = ["Hugo Solleder <hugo.solleder@epfl.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pre-commit = "^3.7.1"
sqlalchemy = "^2.0.31"
sqlmodel = "^0.0.21"
pandas = "^2.2.2"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
